# AI-Chatbot-Assistant

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/skills/feature-dev/: SKILL.md
.github/skills/frontend-design/: SKILL.md
app/: __init__.py  main.py  ui.py
chatbot/: __init__.py
chatbot/context/: personalities.yaml  system.yaml  user.yaml
chatbot/core/: agent.py  context.py
chatbot/utils/: context.py
config/: .env.example  .env.template  __init__.py  app_config.py  llm_config.json
src/: __init__.py
src/backend/: __init__.py  main.py  schemas.py
src/chatbot/: __init__.py
src/chatbot/context/: system.yaml  user.yaml
src/chatbot/core/: agent.py  base_agent.py  context.py
src/chatbot/tools/: __init__.py  builder.py  definitions.py  math.py  math_tool.py  web_search.py
src/frontend/: __init__.py  streamlit_ui.py  ui.py
src/frontend/static/: app.js  index.html  style.css
tests/: __init__.py
tests/chatbot/tools/: test_definitions.py  test_math.py
