[project]
name = "ai-chatbot-assistant"
version = "0.0.5"
description = "AI chatbot assistant served on a GUI to solve user queries."
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "docstring-parser>=0.18.0",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

# Linting configuration with Ruff
[tool.ruff]
line-length = 88
target-version = "py313"
preview = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes  
    "I",     # isort (import sorting)
    "N",     # pep8-naming conventions
    "W",     # pycodestyle warnings
    "ANN",   # flake8-annotations (type hints)
    "D",     # pydocstyle (docstrings)
    "UP",    # pyupgrade (modern Python)
    "B",     # flake8-bugbear (common bugs)
    "ARG",   # Unused function arguments
]

ignore = [
    "E501",    # Line too long (formatter handles this)
    "D203",    # One blank line before class (conflicts with D211)
    "D204",    # 1 blank line required after class docstring
    "D213",    # Multi-line docstring summary second line (conflicts with D212)
    "ANN401",  # Dynamically-typed annotations in **kwargs
]

# Docstring style (choose one: google, numpy, or pep257)
[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Import sorting
[tool.ruff.lint.isort]
known-first-party = ["src"]

# Formatting (double quotes)
[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# Allow missing module docstrings everywhere except __init__.py
"!__init__.py" = ["D100"]
# Don't lint function calls as function default arguments for FastAPI app
"src/backend/main.py" = ["B008"]

# Test Suite
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]
